# actix-admin

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  database.db  database.db-wal
.github/workflows/: hugo.yml  rust.yml
actix_admin/: Cargo.toml
actix_admin/actix_admin_macros/: Cargo.toml
actix_admin/actix_admin_macros/src/: attributes.rs  lib.rs  model_fields.rs  struct_fields.rs
actix_admin/actix_admin_macros/tests/: macros_sqlx.rs
actix_admin/src/: builder.rs  lib.rs  model.rs  view_model.rs
actix_admin/src/routes/: create_get.rs  create_or_edit_get.rs  create_or_edit_post.rs  create_post.rs  delete.rs  delete_many_post.rs  delete_post.rs  edit_get.rs  edit_post.rs  index.rs  list.rs  mod.rs
actix_admin/templates/: base.html  create.html  create_or_edit.html  edit.html  header.html  index.html  list.html
actix_admin/templates/form_elements/: checkbox.html  selectlist.html
actix_admin_macros/: Cargo.toml
actix_admin_macros/src/: attributes.rs  lib.rs  model_fields.rs  selectlist_fields.rs  struct_fields.rs
azure_auth/: Cargo.toml
azure_auth/src/: lib.rs
basictest/basic/: Cargo.toml  main.rs
docs/: Gemfile  _config.yml  config.toml  index.md
docs/content/: _index.md  getting_started.md  index.md
docs/content/docs/: adding-crud-models.md  authentication.md  card-grid.md  custom-filters.md  custom-handler.md  getting-started.md  getting_started.md  multi-tenancy.md  support-sidebar.md  validation.md
example/: .env.example  Cargo.toml
example/azure_auth/src/: lib.rs
example/src/: main.rs
example/src/entity/: comment.rs  post.rs
example/templates/: custom_handler.html  example_base.html  index.html  list.html
examples/azure_auth/: .env.example  main.rs
examples/azure_auth/azure_auth/: Cargo.toml
examples/azure_auth/azure_auth/src/: lib.rs
examples/azure_auth/entity/: comment.rs  mod.rs  post.rs
examples/azure_auth/templates/: custom_index.html  example_base.html  index.html
examples/basic/: Cargo.toml  main.rs
examples/basic/entity/: comment.rs  mod.rs  post.rs  user.rs
examples/basic/src/: main.rs
examples/basic/src/entity/: mod.rs
examples/basic/templates/: card.html  index.html  profile.html  support.html
examples/chat_support/: main.rs
examples/chat_support/templates/: chat_answer.html  custom_index.html  support.html
examples/with_azure_auth/: .env.example  Cargo.toml  README.md
examples/with_azure_auth/azure_auth/: Cargo.toml
examples/with_azure_auth/src/: main.rs
examples/with_azure_auth/src/entity/: comment.rs
src/: builder.rs  csrf.rs  lib.rs  main.rs  model.rs  tera_templates.rs  view_model.rs
src/actix_admin/: mod.rs
src/entity/: comment.rs  mod.rs  post.rs
src/routes/: bulk_action.rs  card_grid.rs  create_or_edit_get.rs  create_or_edit_post.rs  delete.rs  file.rs  helpers.rs  index.rs  list.rs  mod.rs  query.rs  search.rs  show.rs  static_content.rs
src/templates/: base.html  create_or_edit.html  head.html  list.html  loader.html  navbar.html  not_found.html  show.html
src/templates/bootstrapv5/: base.html  card_grid.html  create_or_edit.html  head.html  index.html  list.html  navbar.html  not_found.html  show.html
src/templates/bootstrapv5/create_or_edit/: checkbox.html  input.html  selectlist.html
src/templates/bootstrapv5/form_elements/: checkbox.html  input.html  selectlist.html
src/templates/bootstrapv5/list/: filter.html  header.html  row.html
src/templates/bulma/: base.html  card_grid.html  create_or_edit.html  head.html  index.html  list.html  loader.html  navbar.html  not_found.html  show.html
src/templates/bulma/create_or_edit/: checkbox.html  inline.html  input.html  selectlist.html
src/templates/bulma/form_elements/: input.html  selectlist.html
src/templates/bulma/list/: filter.html  header.html  row.html
src/web_auth/: mod.rs
static/css/: default.css
static/js/: default.js
templates/: base.html  create_or_edit.html  head.html  header.html  index.html  list.html  navbar.html  not_found.html  show.html  unauthorized.html
templates/form_elements/: checkbox.html  input.html  selectlist.html
tests/: crud_get_resp_is_success.rs  crud_post_resp_is_success.rs  delete_is_success.rs  get_request_is_success.rs  integration_test_get_resp_is_success.rs  integration_test_post_resp_is_success.rs  post_create_and_edit_is_success.rs  requests_create_and_edit_post_is_success.rs  requests_delete_is_success.rs  requests_error_paths.rs  requests_get_is_success.rs  requests_new_features.rs  requests_verify_tenant_ref.rs  webdriver_cardgrid.rs  webdriver_create.rs  webdriver_edit.rs  webdriver_edit_tomselect.rs  webdriver_inline_edit.rs  webdriver_navigation.rs  webdriver_support.rs
tests/test_setup/: comment.rs  helper.rs  mod.rs  post.rs  sample_with_tenant_id.rs  webdriver.rs
