[package]
name = "actix-admin"
description = "An admin interface for actix-web"
license = "MIT OR Apache-2.0"
version = "0.7.0"
repository = "https://github.com/mgugger/actix-admin"
edition = "2021"
exclude = [
    "examples/*",
    "actix_admin_macros/*",
    "tests/*",
    "docs/*",
    "README.md",
    ".gitignore",
    ".gitmodules",
    ".github"
]

[lib]
name = "actix_admin"
path = "src/lib.rs"

[features]
default = ["bootstrapv5_css"]
bulma_css = []
bootstrapv5_css = []

[dependencies]
actix-web = "^4.9"
actix-session = { version = "^0.10.1", features = [] }
actix-multipart = "^0.7"
actix-files = "^0.6"
futures-util = "0.3"
chrono = "0.4"
tera = "^1.20"
async-trait = "^0.1"
lazy_static = "^1.5"
serde = "^1.0"
serde_derive = "^1.0"
sea-orm = { version = "^1.1", features = [], default-features = false }
actix-admin-macros = { version = "0.7.0", path = "actix_admin_macros" }
derive_more = { version = "1", features = ["full"] }
regex = "1.11"
urlencoding = "2.1.3"
csv = "1.3"

[dev-dependencies]
sea-orm = { version = "^1.1", features = [ "sqlx-sqlite", "runtime-actix-native-tls", "macros" ], default-features = true }
fantoccini = "0.21"
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
actix-rt = "2.10"
azure_auth = { path = "./examples/azure_auth/azure_auth" }
oauth2 = "4.4"
dotenv = "0.15"
actix-session = { version = "0.10", features = ["cookie-session"] }
itertools = "^0.13"
ollama-rs = "0.2"