[package]
name = "actix-admin"
description = "An admin interface for actix-web"
license = "MIT OR Apache-2.0"
version = "0.8.0"
repository = "https://github.com/mgugger/actix-admin"
edition = "2021"
exclude = [
    "examples/*",
    "actix_admin_macros/*",
    "tests/*",
    "docs/*",
    "README.md",
    ".gitignore",
    ".gitmodules",
    ".github"
]

[lib]
name = "actix_admin"
path = "src/lib.rs"

[features]
default = ["bulma_css"]
bulma_css = []
bootstrapv5_css = []

[dependencies]
actix-web = "^4.14"
actix-session = { version = "^0.11", features = [] }
actix-multipart = "^0.8"
actix-files = "^0.6"
futures-util = "0.3"
chrono = "0.4"
tera = { version = "^2.0", features = ["glob_fs", "preserve_order"] }
async-trait = "^0.1"
serde = "^1.0"
serde_derive = "^1.0"
sea-orm = { version = "^2.0", features = [], default-features = false }
actix-admin-macros = { version = "0.8.0", path = "actix_admin_macros" }
derive_more = { version = "2", features = ["display", "error"] }
regex = "1.11"
urlencoding = "2.1.3"
csv = "1.3"
serde_urlencoded = "0.7"
form_urlencoded = "1.2"
sanitize-filename = "0.6"
log = "0.4"
getrandom = "0.2"

[dev-dependencies]
sea-orm = { version = "^2.0", features = [ "sqlx-sqlite", "runtime-tokio-native-tls", "macros" ], default-features = true }
fantoccini = "0.22"
serde_json = "1.0"
tokio = { version = "1.42", features = ["full"] }
actix-rt = "2.10"
azure_auth = { path = "./examples/azure_auth/azure_auth" }
oauth2 = "5"
dotenv = "0.15"
actix-session = { version = "0.11", features = ["cookie-session"] }
itertools = "^0.15"
ollama-rs = "0.3"

# Silence a handful of stylistic clippy lints that mostly fire in tests and
# generated code; the CI runs `cargo clippy -- -D warnings` so these have
# to be either fixed or explicitly allowed.
[lints.clippy]
result_large_err = "allow"
useless_conversion = "allow"
single_component_path_imports = "allow"
unnecessary_cast = "allow"
match_single_binding = "allow"
let_unit_value = "allow"
borrow_deref_ref = "allow"
write_literal = "allow"
redundant_field_names = "allow"
if_same_then_else = "allow"
too_many_arguments = "allow"
type_complexity = "allow"
should_implement_trait = "allow"