[package]
name = "actix_admin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
actix-session = "0.6.2"
tera = "1.15.0"
actix_admin_macros = { path = "actix_admin_macros" }
oauth2 = "4.1"
base64 = "0.13.0"
async-trait = "0.1.53"
rand = "0.8.5"
url = "2.2.2"
http = "0.2.6"
dotenv = "0.15"
lazy_static = "1.4.0"
futures = "0.3.21"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
sea-orm = { version = "0.8.0", features = [ "sqlx-sqlite", "runtime-actix-native-tls", "macros" ], default-features = false }