[package]
name = "actix_admin"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
tera = "1.16.0"
actix_admin_macros = { path = "actix_admin_macros" }
async-trait = "0.1.53"
lazy_static = "1.4.0"
serde = "1.0.136"
serde_json = "1.0.79"
serde_derive = "1.0.136"
sea-orm = { version = "^0", features = [], default-features = false }