[package]
name = "actix-admin-macros"
description = "macros to be used with actix-admin crate"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mgugger/actix-admin"
version = "0.9.0"
edition = "2021"
exclude = [
    "tests/*"
]

[lib]
proc-macro = true

[dependencies]
darling = "0.23"
quote = "1.0"
syn = { version = "2", features = ["full", "extra-traits"] }
proc-macro2 = { version = "1.0", default-features = false }