[package]
name = "actix-admin-example"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
actix-rt = "2.7.0"
actix-session = { version = "0.7.1", features = ["cookie-session"] }
tera = "1.15.0"
itertools = "0.10.3"
oauth2 = "4.1"
async-trait = "0.1.53"
dotenv = "0.15"
serde = "1.0.136"
serde_derive = "1.0.136"
sea-orm = { version = "^0.9.1", features = [ "sqlx-sqlite", "runtime-actix-native-tls", "macros" ], default-features = true }
lazy_static = "1.4.0"
actix-admin = { path = "../" }
azure_auth = { path = "./azure_auth" }