[package]
name = "azure_auth"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.14"
actix-rt = "2.10"
actix-session = "0.11"

oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
base64 = "0.22"
async-trait = "0.1"
rand = "0.8"
url = "2"
http = "1"
dotenv = "0.15"
futures = "0.3"
serde = "1"
serde_json = "1"
serde_derive = "1"